// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendered with props 1`] = `
<input
  className="boxField foo"
/>
`;

exports[`when rendered without props 1`] = `
<input
  className="boxField"
/>
`;
